force-app/main/default/objects/Einstein_Configuration__mdt/Einstein_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Einstein Configuration</label>
    <pluralLabel>Einstein Configuration</pluralLabel>
</CustomObject>