force-app/main/default/objects/Einstein_Configuration__mdt/fields/Consider_Context__c.field-meta.xml
<CustomField>
    <fullName>Consider_Context__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consider Context?</label>
    <type>Checkbox</type>
</CustomField>