force-app/main/default/objects/Einstein_Configuration__mdt/fields/HTTP_Service__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Service__c</fullName>
    <label>HTTP Service</label>
    <referenceTo>HTTP_Service__mdt</referenceTo>
    <relationshipLabel>Einstein Configuration</relationshipLabel>
    <relationshipName>Einstein_Configuration</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>