force-app/main/default/objects/Einstein_Configuration__mdt/fields/Locales__c.field-meta.xml
<CustomField>
    <fullName>Locales__c</fullName>
    <label>Locales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>