force-app/main/default/objects/Einstein_Configuration__mdt/fields/Webstore_Name__c.field-meta.xml
<CustomField>
    <fullName>Webstore_Name__c</fullName>
    <label>Webstore Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CI_Quest EStore</fullName>
                <default>true</default>
                <label>CI_Quest EStore</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>